[package]
name = "yak-irc"
version = "0.1.0"
authors = ["c74d <8573dd@gmail.com>"]

[features]
default = ["pircolate"]

[dependencies]
error-chain = "0.10"
lazy_static = "0.2"
log = "0.3"
mio = "0.6"
parking_lot = "0.4"
pircolate = {version = "0.2", optional = true}
rustls = "0.10"
smallvec = "0.4"
string_cache = "0.6"
uuid = {version = "0.5", features = ["v4"]}

[dev-dependencies]
quickcheck = "0.4"
